@@ -43,6 +43,7 @@ VERSION 4.2.3
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -----------------------------------------------------------------------------------------
+-$pgv_lang["ALLOW_REMEMBER_ME"]         30 Sep 2009       D
 *$pgv_lang["PGV_SMTP_SSL"]							10 Aug 2009				W
 
 VERSION 4.2.2
